--- a/AVALEHT.html
+++ b/AVALEHT.html
@@ -6,12 +6,15 @@
 <style>
     body {
         background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fbackground-texture&psig=AOvVaw3DRz4GKdqxEzu-d8vcB0Ah&ust=1731064052065000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPCMnqKKyokDFQAAAAAdAAAAABAE");
-        background-size: 200px 500px;
     }
 </style>
 
-<body style="background-color:rgb(183, 192, 196)">
+<body>
     <link href='https://fonts.googleapis.com/css?family=Amaranth' rel='stylesheet'>
     <h1 style='font-family:Amaranth;'>Marie ilutuba</h1>
+    <nav>
+        <a href="hinnakiri.html">Hinnakiri</a></li>
+        <a href="broneeri.html">Broneeri aeg</a></li>
+    </nav>
 </body>
 </html>
